force-app/main/default/objects/Opportunity/fields/Application_Locked__c.field-meta.xml
<CustomField>
    <fullName>Application_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Application Locked</label>
    <type>Checkbox</type>
</CustomField>