force-app/main/default/objects/Opportunity/fields/Contract_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Contract_Deadline__c</fullName>
    <label>Contract Deadline</label>
    <type>DateTime</type>
</CustomField>