force-app/main/default/objects/Opportunity/fields/Education_Score__c.field-meta.xml
<CustomField>
    <fullName>Education_Score__c</fullName>
    <label>Education Score</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>