force-app/main/default/objects/Opportunity/fields/Experience_Score__c.field-meta.xml
<CustomField>
    <fullName>Experience_Score__c</fullName>
    <label>Experience Score</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>