force-app/main/default/objects/Opportunity/fields/Final_Applicant_Score__c.field-meta.xml
<CustomField>
    <fullName>Final_Applicant_Score__c</fullName>
    <formula>IF(
  OR(ISBLANK(Initial_Score__c), ISBLANK(Interview_Score__c)),
  NULL,
  ROUND( (Initial_Score__c + Interview_Score__c) / 2, 2 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Applicant Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>