force-app/main/default/objects/Opportunity/fields/Initial_Score__c.field-meta.xml
<CustomField>
    <fullName>Initial_Score__c</fullName>
    <label>Initial Score</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>