force-app/main/default/objects/Opportunity/fields/Interview_Count_c__c.field-meta.xml
<CustomField>
    <fullName>Interview_Count_c__c</fullName>
    <label>Interview_Count__c</label>
    <summaryForeignKey>Interview__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>