force-app/main/default/objects/Opportunity/fields/Interview_Score__c.field-meta.xml
<CustomField>
    <fullName>Interview_Score__c</fullName>
    <formula>IF(
  Interview_Count_c__c = 0,
  NULL,
  Interview_Score_Total__c / Interview_Count_c__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interview Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>