force-app/main/default/objects/Opportunity/fields/Interview_Score_Total__c.field-meta.xml
<CustomField>
    <fullName>Interview_Score_Total__c</fullName>
    <label>Interview Sum Score</label>
    <summarizedField>Interview__c.Interview_Score__c</summarizedField>
    <summaryForeignKey>Interview__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>