force-app/main/default/objects/Opportunity/fields/Selection_Status__c.field-meta.xml
<CustomField>
    <fullName>Selection_Status__c</fullName>
    <label>Selection Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shortlisted</fullName>
            </value>
            <value>
                <fullName>Selected for Contract</fullName>
            </value>
            <value>
                <fullName>Contract Sent</fullName>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Not Selected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>