force-app/main/default/objects/Opportunity/validationRules/VR_Opp_Hired_Requires_Approved_Offer.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Opp_Hired_Requires_Approved_Offer</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(StageName, &quot;Hired&quot;),
  NOT(ISPICKVAL(Offer_Approval_Status__c, &quot;Approved&quot;))
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>You cannot set Stage to Hired until the Offer is Approved.</errorMessage>
</ValidationRule>