force-app/main/default/objects/Opportunity/validationRules/VR_Opp_Job_Position_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Opp_Job_Position_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Job_Position__c)</errorConditionFormula>
    <errorDisplayField>Job_Position__c</errorDisplayField>
    <errorMessage>Job Position is required.</errorMessage>
</ValidationRule>