force-app/main/default/objects/Opportunity/validationRules/VR_Opp_Locked_Block_Edits.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Opp_Locked_Block_Edits</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  Application_Locked__c = TRUE,
  NOT($Profile.Name = &quot;System Administrator&quot;)
)</errorConditionFormula>
    <errorDisplayField>Application_Locked__c</errorDisplayField>
    <errorMessage>This Job Application is locked and cannot be edited.</errorMessage>
</ValidationRule>