force-app/main/default/objects/Opportunity/validationRules/VR_Opp_OfferSent_Recommendation_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Opp_OfferSent_Recommendation_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(StageName, &quot;Offer Sent&quot;),
  ISBLANK(TEXT(Recruiter_Recommendation__c))
)</errorConditionFormula>
    <errorDisplayField>Recruiter_Recommendation__c</errorDisplayField>
    <errorMessage>Recruiter Recommendation is required when Stage is Offer Sent.</errorMessage>
</ValidationRule>